# protestr

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: lint-and-test.yml  publish-to-pypi.yml  python-publish.yml  validate-pull-request.yml
examples/: lib.py  specs.py  test_with_mongo.py  test_with_redis.py
src/protestr/: __init__.py  _provider.py  _resolver.py  _specs.py  specs.py
tests/: test_provider.py  test_resolver.py  test_specs.py
tests/example/: fakes.py  specs.py  test_example.py
tests/examples/: fakes.py  specs.py  test_examples.py
tests/examples/somewhere/: my_password_validator.py
