[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protestr"
dynamic = ["version"]
description = "Pro test fixture configurator"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Ikram Khan", email = "ikramkhanfahim@gmail.com" },
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Grimmscorpp/protestr"
Documentation = "https://github.com/Grimmscorpp/protestr#readme-ov-file"
Issues = "https://github.com/Grimmscorpp/protestr/issues"
Source = "https://github.com/Grimmscorpp/protestr"

[tool.hatch.version]
path = "src/protestr/__about__.py"
